--- a/Login_ONLY_with_Cookie/templates/register.html
+++ b/Login_ONLY_with_Cookie/templates/register.html
@@ -10,7 +10,8 @@
              <label class="form-label" for="password">Password: </label>
              <input type= "password" id="password" name="password" class="form-control" />
          </div>
-        <br />
         <input type="submit" value="Register" class="btn btn-primary"/>
      </form>
+     <br />
+     <small>Already have an account? <a href="{{reverse_url('login')}}">Login</a></small>
 {% end %}
